src/css/style.css
html {
  height: 100%;
}
body {
  background-image: url('/background'); 
  background-repeat: no-repeat;
  background-size: 100% 100%;
  margin: 0;
}
.container {
  display: flex;
  width: 100%;
}
.left {
  position: relative;
  width: 40%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 70px 0 50px 0; 
}
.right {
  height: 100%;
  width: 60%;
  padding-top: 50px;
  display: flex;
  justify-content: center;
}

.message {
  opacity: 0;
  width: 414px;
  height: 80px;
  font: 16px/20px Tahoma;
  border-radius: 4px;
  text-align: center;
  line-height: 80px;
  margin-bottom: 10px;
  transition: all 0.48s ease-in-out;
}

progress {
  transition: all 0.48s ease-in-out;
}
.download-progress {
  position: fixed;
  border-radius: 4px;
  width: 100%;
  height: 5px;
}

.download-progress::-webkit-progress-bar {
  background-color: transparent;
}

.download-progress::-webkit-progress-value {
  background: linear-gradient(to right, #3EC97A, red);
}

#uploadForm {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

#uploadForm input[type=file] {
  border: 1px solid #797979 ;
  width: 350px;
  height: 29px;
  color:  #0707075e;
  font-size: 21px;
}

.nameOfUploadFile {
  width: 150px;
  height: 40px;
  border-radius: 4px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 0;
  text-align: center;
  background-color: #dcf0ab;
  font: 16px/40px Tahoma;
  border: 1px solid #4FD666;
  color: #0000006b;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#uploadForm input[type=submit]{
  border: 1px solid #4FD666;
}

.upload-progress {
  display: inline-block;
  width: 417px;
  height: 35px;
  border: 1px solid #4FD666;
  border-radius: 5px;
  margin-bottom: 30px;
}

.uploadProgressValue {
  position: absolute;
  top: 278px;
  font-size: 21px;
  color: rgba(61, 89, 103, 0.81);
}

.upload-progress::-webkit-progress-bar {
  border-radius: 5px;
  background-color: #dcf0ab3d;
}

.upload-progress::-webkit-progress-value {
  background-color: #69EA49; 
} 

#downloadForm {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
}

#downloadForm input[type=text] {
  padding-left: 15px;
  padding-right: 15px; 
  width: 257px; 
  height: 36px;
  border-radius: 4px;
  text-align: center;
  background-color: #dcf0ab;
  font: 16px Tahoma;
  border: 1px solid #4FD666;
  color: #0000006b;
  text-overflow: ellipsis;
  overflow: hidden;
  outline: none;
  

}

#downloadForm input[type=submit] {
  text-align: center;
  font: 16px/40px Tahoma;
}

.upload-progress, .download-progress, .uploadProgressValue {
  opacity: 0; 
}

.upload-progress.visible,  .download-progress.visible, .uploadProgressValue.visible{
  opacity: 1;
}

.image {
  border: none;
  max-width: 90%;
  min-height:  300px;
  max-height:  600px;
  background-size: 100% 100%;
}

.submitOrButton {
  width: 125px;
  height: 40px;
  border-radius: 4px;
  text-align: center;
  cursor: pointer;
  display: inline-block;
  font: 16px/40px Tahoma;
  transition: all 0.18s ease-in-out;
  border: 1px solid #4FD666;
  background: linear-gradient(to top right, #3EC97A, #69EA49 20%, rgba(61, 89, 103, 0.81) 80%, rgba(255, 255, 255, 0)) top right/500% 500%;
  color: white;
  transition: all 0.48s ease-in-out;
  outline: none;
}

.submitOrButton:hover {
  background-position: bottom left;
}

.buttonShow {
  border-radius: 50%;
  width: 180px;
  height: 180px;
}

.listOfFiles {
  border: 1px solid #4FD666;
  position: relative;
  font: 16px/20px Tahoma;
  color: white;
  display: none;
  padding: 18px 30px;
  background: linear-gradient(to top right, #3EC97A, #69EA49 20%, rgba(61, 89, 103, 0.81) 80%, rgba(255, 255, 255, 0)) top right/500% 500%;
  width: 354px;
  height: 300px;  
  border-radius: 4px;
  text-align: left;
  overflow-y: auto;
}

.fa-times {
  font-size: 40px;
  color: rgba(61, 89, 103, 0.31);
}

.fa-times:before{
  position: absolute;
  top: 10px;
  right: 30px;
  transition: all 0.28s ease-in-out;
}

.fa-times:hover {
  color: #3EC97A;
  background-position: bottom left;
}

#chooseFile {
  opacity: 0;
  position: absolute;
  z-index: -1;
}

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  border: 1px solid green;
  -webkit-text-fill-color:  #0000006b;
  transition: background-color 5000s ease-in-out 0s;
}

